- Maven-Java-Compiler set from 11 to 18 - Finished first Sign-Up and Sign-In implementation - Documentation